# Diplom

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
ml_analyzer/: admin.py  apps.py  backend.py  choices.py  models.py  service.py  urls.py  views.py
ml_analyzer/migrations/: 0001_initial.py
ml_analyzer/ml_model/: ddos_dataset_2024.keras  normal_data_mean.npy  normal_data_std.npy  tf_python_keras_model2.h5
project_root/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
