[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["NaiNaniNai <nail02-02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
scapy = "^2.5.0"
celery = "^5.4.0"
numpy = "^1.26.4"
keras = "^3.3.3"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
